# seo3-reasoning-web

./: .env.example  .gitignore  DATA_AVAILABILITY.md  LICENSE  README.md  pyproject.toml
config/: experiment_config.yaml  gcp_setup.sh  settings.py
data/: domains.json
paper/: main.tex  preview.html  references.bib
paper/samples/: blackbriar_product.html  expresslegal_article.html  index.html  salzburgerland_restaurant.html  wordlift_blog_post.html
paper/tables/: agentic_metrics.tex  domain.tex  main_results.tex  query_type.tex  stat_tests.tex
results/: factual_overlap.csv
scripts/: collect_and_transform.py  compare_c6_variants.py  factual_overlap.py  fetch_web_pages.py  generate_latex.py  retry_judge_failures.py
services/neural_search/: deploy.sh  main.py
src/dataset/: collector.py  query_generator.py  transformer.py
src/evaluation/: analysis.py  metrics.py  runner.py
src/indexing/: vectorsearch.py
src/retrieval/: agentic_rag.py  standard_rag.py
templates/: agent_instructions_block.html  enhanced_entity.html  enhanced_entity_plus.html  llms_instructions.md
tests/: test_dataset.py  test_metrics.py
